all changes for now (too lazy)